fixed gigantic pep logo on mobile

--- a/client/components/Footer/index.module.css
+++ b/client/components/Footer/index.module.css
@@ -155,6 +155,10 @@
   }
 }
 @media screen and (max-width: 560px) {
+  .logo {
+    width: 160px;
+    height: 160px;
+  }
   .footer {
     padding: 40px 30px !important;
   }
